# secret-santa

./: .env.example  .env.test.2025  .env.test.admin_games.2025  .env.test.navbar.2025  .env.test.navbarlinks.2025  .gitignore  .secrets.baseline  AGENTS.md  Dockerfile  JingleBellHero_FIX_NOTES.md  README.md  SPECS.md  TESTING.md  app.py  couples.yaml  jest.config.cjs  jest.setup.js  package-lock.json  package.json  playwright.config.ts  previous.yaml  pyproject.toml  scores.sqlite3  secret-santa-2024.json  secret-santa-2025.json  secret_santa.py  storage.py
__tests__/: JingleBellHero.test.jsx  jingle_bell_hero_chart.test.js  reindeer_rush_audio.test.js  reindeer_rush_platforms.test.js
e2e/: anden_advent.spec.ts  anden_physics.spec.ts  arcade_overlay.spec.ts  forste_advent.spec.ts  mobile_screenshots.spec.ts  reindeer_rush.spec.ts  snake_flooding.spec.ts  snake_fullscreen.spec.ts  snake_grid.spec.ts  snake_resize_sticky.spec.ts  snake_restart.spec.ts  snake_sticky.spec.ts  tredje_advent_notes.spec.ts
scripts/: hash_password.py
static/: anden_advent.js  anden_config.js  arcade_overlay.js  forste_advent.js  jingle_bell_hero_app.js  jingle_bell_hero_chart.js  jingle_bell_hero_core.js  leaderboard_buttons.js  lodtraekning.html  manifest.json  react_dom_client_runtime.js  react_runtime.js  reindeer_gestures.js  reindeer_ground.js  reindeer_rush.js  script.js  styles.css  sw.js
templates/: admin.html  anden_advent.html  base.html  fjerde_advent.html  forste_advent.html  glaedelig_jul.html  high_scores.html  index.html  lodtraekning.html  reindeer_rush.html  tredje_advent.html  (+1 more)
(+41 files in other folders)
