[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["jkr <jimmy.kjaersgaard@gmail.com>"]
readme = "README.md"
packages = [{include = "secret_santa"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flask-cors = "^5.0.0"
jupyterlab = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
