 [project]
 name = "secret-santa"
 version = "0.1.0"
 description = "Lightweight Secret Santa web app"
 readme = "README.md"
 authors = [{ name = "jkr", email = "jimmy.kjaersgaard@gmail.com" }]
 requires-python = ">=3.10"
 dependencies = [
   "Flask>=3.0.3",
   "flask-cors>=5.0.0",
   "python-dotenv>=1.0.1",
 ]

 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
